--- a/minecraftpack.html
+++ b/minecraftpack.html
@@ -15,7 +15,7 @@
   h1,h2,h3{
     font-family: 'Lato', sans-serif;
   }
-  p,b{
+  html{
     font-family: 'Merriweather Sans', sans-serif;
   }
   #first{
@@ -96,6 +96,10 @@
 #third{
   background-image: url('https://s33.postimg.org/gq0dnuprz/halftone-yellow.png');
 }
+#fourth{
+  background-color: black;
+  color: white;
+}
   </style>
 </head>
 <body>
@@ -141,18 +145,49 @@
       </div>
     </section>
     <section class="o-container u-centered section" id="third">
-      <img src="https://png.icons8.com/download-from-the-cloud/color/100/000000" class="o-image">
+      <img src="https://png.icons8.com/download-from-the-cloud/color/100/000000" class="o-image center">
       <h2>Downloads</h2>
       <p>Minecraft Pack Is Available Is Several Versions With Modified Components For Each Type.</p>
+      <div class="o-grid">
+        <div class="o-grid__cell">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="window.location.replace('https://cdn.rawgit.com/DavidnoronhaV/minecraft-pack/6b3a0e84/coal.tar.gz');"><img src="https://s33.postimg.org/dzr1q7y3j/minecraft_coal.jpg" class="o-image" width="100" height="100"></button>
+            <div class="dropdown-content">
+<p>Coal Is Recommended For Low - End PC's Or For People Who Want The Most FPS Out Of Their Minecraft Experience</p>
+            </div>
+          </div>
+        </div>
+        <div class="o-grid__cell">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="window.location.replace('https://cdn.rawgit.com/DavidnoronhaV/minecraft-pack/c7142400/redstone.tar.gz');"><img src="https://s33.postimg.org/ibfnf6mzz/redstone_ore_by_tardifice-d84jj7t.png" class="o-image" width="100" height="100"></button>
+            <div class="dropdown-content">
+<p>Redstone Is Recommended For Normal PC's And Is Recommended</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
-</body>
-<footer>
+<section class="o-container u-centered section" id="fourth">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pagepiling.js@1.5.4/dist/jquery.pagepiling.min.css">
   <script src="https://cdn.jsdelivr.net/npm/pagepiling.js@1.5.4/jquery.pagepiling.min.js" type="text/javascript"></script>
   <script>$(document).ready(function() {
 	$('#page').pagepiling();
 });</script>
-</footer>
+Made With Love By Minecraft Lovers.
+<br>
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+<br>
+See On Github
+<br>
+<iframe src="https://ghbtns.com/github-btn.html?user=DavidNoronhaV&repo=minecraft-pack&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+<br>
+Find Us At
+<br>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30742.51381844113!2d73.79535895222826!3d15.601571353550789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbfeae2fae1f7d9%3A0x7017bd171e9745a4!2sMapusa%2C+Goa+403519!5e0!3m2!1sen!2sin!4v1511710009183" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+<br>
+<iframe src="https://freemusicarchive.org/donate/widget?size=large" width="954" height="150" frameborder="0" scrolling="no" align="top" style="margin:0;padding:0;border:none;"><a href="https://freemusicarchive.org/donate" target="_blank">Support the Free Music Archive!</a></iframe>
+</div>
+</section>
 </html>
