--- a/minecraft.html
+++ b/minecraft.html
@@ -183,6 +183,28 @@ a.p{
       </div>
     </section>
 <section class="o-container u-centered section" id="fifth">
+  <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+<script>
+window.addEventListener("load", function(){
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#000"
+    },
+    "button": {
+      "background": "#f1d600"
+    }
+  },
+  "theme": "edgeless",
+  "position": "bottom-right",
+  "content": {
+    "href": "http://davidnoronhav.github.io/policy.xml"
+  }
+})});
+document.cookie = ("userip=", json.ip);
+</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pagepiling.js@1.5.4/dist/jquery.pagepiling.min.css">
   <script src="https://cdn.jsdelivr.net/npm/pagepiling.js@1.5.4/jquery.pagepiling.min.js" type="text/javascript"></script>
