--- a/minecraft.html
+++ b/minecraft.html
@@ -10,6 +10,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://unpkg.com/blaze">
   <title>Minecraft Pack</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   @import url('https://fonts.googleapis.com/css?family=Lato|Merriweather+Sans');
   h1,h2,h3{
