--- a/changedetails555.html
+++ b/changedetails555.html
@@ -29,6 +29,7 @@
   </style>
 </head>
 <body>
+  <div class="o-container u-centered">
   <br>
   <h2>Change Login Details</h2>
   <br>
@@ -40,6 +41,7 @@
   <br>
   <p id="emaildata"></p>
   <br>
+  </div>
 </body>
 <footer>
   <script>
