--- a/changedetails555.html
+++ b/changedetails555.html
@@ -41,6 +41,7 @@
   <br>
   <p id="emaildata"></p>
   <br>
+    <button class="c-button c-button--brand" onclick="document.getElementById('change').css='visible'"></button>
   </div>
 </body>
 <footer>
