--- a/cookieforms.html
+++ b/cookieforms.html
@@ -1,55 +1,49 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <script type="application/javascript">
-    function getIP(json) {
-      Cookies.set('ip', json.ip, { expires: 365 , path: '/' });
-    }
-  </script>
-  <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
-  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
-<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-<script>
-window.addEventListener("load", function(){
-window.cookieconsent.initialise({
-  "palette": {
-    "popup": {
-      "background": "#000"
+  <title>Cookie Forms</title>
+  <link rel="stylesheet" href="cookieconsent.min.css">
+  <script src="cookieconsent.min.js" type="text/javascript"></script>
+  <script>
+  window.addEventListener("load", function(){
+  window.cookieconsent.initialise({
+    "palette": {
+      "popup": {
+        "background": "#000"
+      },
+      "button": {
+        "background": "#f1d600"
+      }
     },
-    "button": {
-      "background": "#f1d600"
-    }
-  },
-  "theme": "edgeless",
-  "position": "bottom-right"
-})});
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pagePiling.js/1.5.4/jquery.pagepiling.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pagePiling.js/1.5.4/jquery.pagepiling.min.js"></script>
-<link rel="stylesheet" href="http://unpkg.com/blaze">
-<script>
-$(document).ready(function() {
-	$('#pagepiling').pagepiling();
-});
-</script>
-<style>
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-#first{
-  background-color: rgb(27, 188, 155);
-}
-body{
-  font-family: 'Open Sans', sans-serif;
-}
-</style>
+    "theme": "edgeless",
+    "position": "bottom-right"
+  })});
+  </script>
+  <style>
+  #first{
+    background-color: 	rgb(27, 188, 155);
+  }
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+  body{
+    font-family: 'Open Sans', sans-serif;
+  }
+  h1{
+    font-family: 300px;
+  }
+  </style>
 </head>
 <body>
-<div id="pagePiling">
+<div id="pagepiling">
   <section class="o-container u-centered section" id="first">
 <div class="o-grid">
 <div class="o-grid__cell">
-
+<h1>
+  Cookie Forms ,
+  Data Saved In The Browser
+</h1>
+</div>
+<div class="o-grid__cell">
+<img src="https://gitcdn.xyz/repo/DavidnoronhaV/davidnoronhav.github.io/master/icon__cookies-and-milk.svg" class="o-image">
 </div>
 </div>
   </section>
