--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<iframe height="100%" width="100%" src="http://about.me/davidnoronha">
+<!doctype html>
+<html>
+<link rel="stylesheet" href="http://unpkg.com/blaze">
+<body>
+  <div class="o-container u-centered">
+<br>
+<img class="o-image" src="https://aboutme.imgix.net/background/users/d/a/v/davidnoronha_1511788996_319.jpg">
+<h1>Projects</h1>
+<a href="cookieforms.html">Cookie Forms</a>
+<br>
+  </div>
+</body>
 </html>
