--- a/cookieforms.html
+++ b/cookieforms.html
@@ -23,10 +23,12 @@
   #first{
     background-color: 	rgb(27, 188, 155);
   }
-@import url('https://fonts.googleapis.com/css?family=Merriweather');
+  @font-face{
+  font-family: "Butler";
+  src: url('Butler.otf');
+  }
   body{
-    font-family: 'Merriweather', serif;
-
+  font-family: "Butler";
   }
   h2{
     font-size: 80px;
