--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <link rel="stylesheet" href="http://unpkg.com/blaze">
+<style>
+@font-face{
+font-family: "Butler";
+src: url('Butler.otf');
+}
+body{
+font-family: "Butler";
+}
+</style>
 <body>
   <div class="o-container u-centered">
 <br>
@@ -8,6 +17,7 @@
 <h1>Projects</h1>
 <a href="cookieforms.html">Cookie Forms</a>
 <br>
+<a href="minecraft.html">Minecraft Pack</a>
   </div>
 </body>
 </html>
