--- a/minecraft.html
+++ b/minecraft.html
@@ -7,18 +7,20 @@
 <link rel="manifest" href="/manifest.json">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
+<style>
+@font-face{
+font-family: "Butler";
+src: url('Butler.otf');
+}
+body{
+font-family: "Butler";
+}
+</style>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://unpkg.com/blaze">
   <title>Minecraft Pack</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  @import url('https://fonts.googleapis.com/css?family=Lato|Merriweather+Sans');
-  h1,h2,h3{
-    font-family: 'Lato', sans-serif;
-  }
-  html{
-    font-family: 'Merriweather Sans', sans-serif;
-  }
   #first{
     background-image: url('https://s33.postimg.org/n3g9zcd8v/TOpt_Pwz-best-minecraft-backgrounds.jpg');
     color:white
