--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 @font-face{
 font-family: "Butler";
-src: url('Butler.otf');
+src: url('http://jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/Butler.otf');
 }
 body{
 font-family: "Butler";
