--- a/minecraft.html
+++ b/minecraft.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="144x144" href="http://jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="http://jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/favicon-16x16.png">
+<link rel="manifest" href="http://jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/manifest.json">
+<link rel="mask-icon" href="http://jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
 <style>
 @font-face{
 font-family: "Butler";
-src: url('Butler.otf');
+src: url('http://jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/Butler.otf');
 }
 body{
 font-family: "Butler";
