--- a/404.html
+++ b/404.html
@@ -1,33 +1,25 @@
----
-permalink: /404.html
----
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<style>
-div {position: absolute; top: 0; right: 0; bottom: 0; left: 0;}
-html, body {
-       height: 100%;
-       margin: 0;
-   }
-
-   #wrapper {
-       min-height: 100%;
-   }
-</style>
-<link rel="stylesheet" href='http://unpkg.com/blaze'>
-<link rel="stylesheet" href="normal.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vide/0.5.1/jquery.vide.min.js"></script>
-<div style="width: 1000px; height: 500px;" id="wrapper"
-  data-vide-bg="mp4: PEOPLE_ARE_AWESOME_2015__BEST_VIDEOS_OF_THE_YEAR!.mp4,  poster: QjNcz.jpg"
-  data-vide-options="posterType: jpg, loop: false, muted: false, position: 0% 0%">
-</div>
-<div class="o-container u-centered">
-<br>
-<h1>There's nothing here.
-Whatever you were looking for doesn't currently exist at this address. Unless you were looking for this error page, in which case: Congrats! You totally found it.</h1>
-<br>
-</div>
-
+  <head>
+    <meta charset="utf-8">
+    <title>404</title>
+    <style>
+    @font-face {
+      font-family: "Butler";
+      src: url('Butler.otf');
+    }
+    body{
+      background: linear-gradient(to top, #ff512f, #dd2476);
+      font-family: "Butler";
+    }
+    </style>
+  </head>
+  <body>
+    ---
+    permalink: /404.html
+    ---
+    <div style="width:100%;height:0;padding-bottom:68%;position:relative;"><iframe src="https://giphy.com/embed/xT0BKFyZt9MMx9xkpW" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+    <br>
+    Whatever you were looking for doesn't currently exist at this address. Unless you were looking for this error page, in which case: Congrats! You totally found it.
+  </body>
 </html>
