--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@ font-family: "Butler";
 <br>
 <a href="minecraft.html">Minecraft Pack</a>
   </div>
+  <a href="fonts.html">Fonts</a>
 </body>
 </html>
