--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <link rel="stylesheet" href="http://unpkg.com/blaze">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110695802-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110695802-1');
+</script>
+    <style>
 <style>
 @font-face{
 font-family: "Butler";
