--- a/fonts.html
+++ b/fonts.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Fonts</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110695802-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-110695802-1');
+    </script>
+        <style>
 <style media="screen">
 @font-face{
 font-family: "Butler";
