--- a/minecraft.html
+++ b/minecraft.html
@@ -16,6 +16,15 @@ body{
 font-family: "Butler";
 }
 </style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110695802-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110695802-1');
+</script>
+    <style>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://unpkg.com/blaze">
   <title>Minecraft Pack</title>
