--- a/spruce10.html
+++ b/spruce10.html
@@ -16,7 +16,7 @@
     <style>
     @font-face {
       font-family: "Butler";
-      src: url('cdn.jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/Butler.otf');
+      src: url('http://cdn.jsdelivr.net/gh/davidnoronhav/davidnoronhav.github.io@1.0/Butler.otf');
     }
     #page{
       font-family: "Butler";
@@ -38,7 +38,7 @@
 }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pagepiling.js@1.5.4/jquery.pagepiling.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pagepiling.js@1.5.4/dist/jquery.pagepiling.min.css">
   </head>
   <body>
